# lab1

./: .gitignore  README.org  main.cpp
lab1/: main.cpp
lab2/: main.cpp
lab3/: main.cpp
lab4/: Makefile  input_a  input_b  main.cpp
lab5/: Makefile  input  main.cpp  output
lab6/: Makefile  app.cpp  fraction.cpp  fraction.h
lab6/src/: app.h  fraction.cpp
lab6/test/: fraction.cc
lab7/: CMakeLists.txt
lab7/src/: CMakeLists.txt  app.cpp  app.h  first_term_student.cpp  first_term_student.h  id.cpp  id.h  second_term_student.cpp  second_term_student.h  student.cpp  student.h  student_util.cpp  student_util.h
lab7/test/: main.cc
lab8/src/: calc.cpp  calc.h  main.cpp  stack_array.h
lab8/test/: Makefile  test1.cpp
sem1/lab3/: main.cpp
sem1/lab4/: input_b
sem1/lab5/: input
sem1/lab6/: CMakeLists.txt
sem1/lab6/src/: app.cpp  fraction.h  main.cpp
sem1/lab8/: CMakeLists.txt
sem1/test1/: Makefile  input  output_ch.txt  output_encr.txt  output_encr_encr.txt
sem1/test2/: word_card.h
sem2/Asm/: main.cpp
sem2/Practice/: Ларин_Егор_4Б_Привет_от_детей_Деревяго.docx
sem2/Regexp/: L1_NEW_UTF8.txt  L1_UTF8.txt  README.md  app.cpp  app.h  main.cpp  regex.py  student.cpp  student.h
sem2/asm-lab-2/: Makefile  dot.asm  main.c  triangle.asm
sem2/lab2/: CMakeLists.txt
sem2/lab4/: Makefile  main.c  string.asm
sem2/lab5/: Makefile  f.asm  main.c
sem2/lab6/: Makefile  magic.asm  main.c  main.cpp  module.asm
sem2/winapi1/: CMakeLists.txt
test1/: exe  main.cpp
test2/: bidirectional_list_on_array.h  file_reader.h  vocabulary.h
(+17 files in other folders)
